[package]
name = "luna-lib"
version = "1.2.0"
edition = "2021"
description = "a light weight interpreted programming language"
license = "MIT"
readme = "README_lib.md"
[package.metadata.bundle.bin.luna]
name = "Luna"
identifier = "luna"

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"
lto = true

[dependencies]
chrono = "0.4.34"
libloading = "0.8.3"
rand = "0.8.5"

[[bin]]
name = "luna"
path = "src/main.rs"
